@@ -1,3 +1,7 @@
+2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/index.html (href): announce .22
+
 2005-05-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* nl/switch/advantages.html: support: language fix
